fix pth
